parser/tests/bad/for01-5.st
% range of a 'for' statement must have type 'int'
%   decreasing, no id, begin

for decreasing: 3.0..1
  % empty
end for
